[package]
name = "tt"
version = "0.1.0"
edition = "2021"
description = "Timetracker (TT) - a CLI time tracking application"
authors = ["pergeri <pergunnar.eriksson@gmail.com>"]
license = "GPL-3.0-only"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
colored = "2.0"
prettytable-rs = "0.10"
csv = "1.2"
regex = "1.9" 
